# transformable_ws

./: .gitignore
src/gz_attach_links/: CMakeLists.txt
src/gz_attach_links/models/biglide/: biglide.sdf
src/gz_attach_links/models/four_bar/: four_bar.sdf
src/motor_controller/: CMakeLists.txt  package.xml
src/motor_controller/config/: gazebo_ros_control.yaml
src/motor_controller/launch/: joystick.launch  teleop.launch
src/motor_controller/src/: joystick_controller.cpp  motor_controller.cpp  teleop_controller copy.cpp  teleop_controller.cpp  teleop_controller1.cpp  torque.cpp
src/pegasus_gazebo_plugins/: CMakeLists.txt
src/tryd/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/tryd/config/: controllers.yaml  joint_names_tryd.yaml
src/tryd/launch/: display.launch  gazebo.launch  tryd.launch.py
src/tryd/meshes/: base_link.STL  l1_lf.STL  l1_lh.STL  l1_rf.STL  l1_rh.STL  l2_lf.STL  l2_lh.STL  l2_rf.STL  l2_rh.STL  l3_lf1.STL  l3_lf2.STL  l3_lf3.STL  l3_lh1.STL  l3_lh2.STL  l3_lh3.STL  l3_rf1.STL  l3_rf2.STL  l3_rf3.STL  l3_rh1.STL  l3_rh2.STL  l3_rh3.STL  l4_lf1.STL  l4_lf2.STL  l4_lf3.STL  l4_lh1.STL  l4_lh2.STL  l4_lh3.STL  l4_rf1.STL  l4_rf2.STL  l4_rf3.STL  l4_rh1.STL  l4_rh2.STL  l4_rh3.STL
src/tryd/rviz/: config.rviz
src/tryd/sdf/: model.sdf  model_1.sdf
src/tryd/urdf/: tryd.csv  tryd.urdf  tryd1.urdf
src/tryd/worlds/: earth.world  stairs_gai.world  world.sdf
