<package format="2">
  <name>tryd</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for tryd</p>
    <p>This package contains configuration data, 3D models and launch files
for tryd robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>unitree_legged_msgs</depend>

  <!-- <export>
    <architecture_independent />
    <gazebo_ros_control plugin="${prefix}/gazebo_closed_loop_hw_sim_plugins.xml"/>
  </export> -->

  <export>
      <!-- Other tools can request additional information be placed here -->
      <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>

</package>